missing Integer.valueOf(int) & String.contains() in Java 1.4 classlib. rewrited to "new Integer(int)" & "String.indexOf()>=0"
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki/trunk@1419 f329d543-caf0-0310-9063-dda96c69346f